[package]
name = "odt"
version = "0.1.0"
edition = "2021"
default-run = "dtc"

[dependencies]
hashlink = "0.9.1"
pest = "2.7.15"
pest_derive = "2.7.15"
clap = { version = "4.5.21", features = ["derive"] }
bumpalo = { version = "3.16.0", features = ["collections"] }

[features]
wrapping-arithmetic = []

[[bin]]
name = "dtc"

[[bin]]
name = "dtsfmt"

[[bin]]
name = "genexpr"

[dev-dependencies]
pretty_assertions = "1.4.1"

