[package]
name = "odt"
version = "0.1.0"
edition = "2021"
default-run = "dtc"

[dependencies]
hashlink = "0.10"
pest = "2"
pest_derive = "2"
clap = { version = "4.5.21", features = ["derive"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
pestle = "0.1"

[features]
wrapping-arithmetic = []

[[bin]]
name = "dtc"

[[bin]]
name = "dtsfmt"

[dev-dependencies]
pretty_assertions = "1.4.1"

