[package]
name = "odt"
version = "0.1.0"
edition = "2021"
description = "devicetree tools"
repository = "https://github.com/a6f/odt"
readme = "README.md"
default-run = "dtc"

[dependencies]
hashlink = "0.10"
pest = "2"
pest_derive = "2"
clap = { version = "4.5", features = ["derive"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
pestle = "0.2"
num-derive = "0.4.2"
num-traits = "0.2.19"

[features]
wrapping-arithmetic = []

[dev-dependencies]
pretty_assertions = "1.4.1"

